# ao-visualizer

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: AccuracyChart.jsx  App.jsx  Filters.jsx  Methodology.jsx  api.js  combos.js  components.jsx  exportStats.js  stats.js  styles.css
frontend/src/pages/: Branch.jsx  Group.jsx  Home.jsx  Run.jsx
server/: hf.py  main.py  reports.py  verbalizations.py
